--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
-h1 {
-  font-size: large;
+.wether-conteinar {
+  border: solid 1px black;
+  height: 100vh;
+  width: 100vw;
 }
 /*# sourceMappingURL=style.css.map */
