html修正。役割分担 具志堅さん⇨日付、3日間の天気（アイコンイメージ）　＋とぐる 金城⇨波、風

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -20,9 +20,19 @@
   }
 
   &-fhoto{
-    // background-color: aquamarine;
-    height: 60%;
+    background-color: aquamarine;
+    height: 40%;
 
+  }
+
+  &-wind{
+    background-color: pink;
+    height: 30%;
+  }
+
+  &-waves{
+    background-color: yellow;
+    height: 30%;
   }
 
 }
