--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,17 @@
 }
 
 .weather-fhoto {
-  height: 60%;
+  background-color: aquamarine;
+  height: 40%;
+}
+
+.weather-wind {
+  background-color: pink;
+  height: 30%;
+}
+
+.weather-waves {
+  background-color: yellow;
+  height: 30%;
 }
 /*# sourceMappingURL=style.css.map */
