--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 .weather {
   text-align: center;
+  background-image: url(../../img/background.jpeg);
+  background-size: cover;
   height: 100vh;
   width: 100vw;
 }
@@ -8,12 +10,11 @@
   display: flex;
   height: 80vh;
   width: 100vw;
-  margin: 10px auto;
   justify-content: center;
 }
 
 .weather-today, .weather-tomorrow, .weather-dayAfterTomorrow {
-  border: solid 1px black;
+  border: double 5px white;
   width: 300px;
 }
 
@@ -23,13 +24,26 @@
 }
 
 .weather-wind, .weather-wind1, .weather-wind2 {
-  height: 30%;
+  display: flex;
   align-items: center;
+  justify-content: center;
+  height: 30%;
   font-size: 28px;
+  font-weight: 700;
+  color: white;
 }
 
 .weather-waves, .weather-waves1, .weather-waves2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 30%;
   font-size: 30px;
+  font-weight: 700;
+  color: white;
+}
+
+h1 {
+  margin: 0%;
 }
 /*# sourceMappingURL=style.css.map */
