--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,6 +6,7 @@
   height: 100vh;
   width: 100vw;
 
+
   &-conteinar {
     display: flex;
     // border: solid 1px black;
@@ -21,9 +22,25 @@
     width: 300px;
   }
 
+
+  .area-weathers, .area-weathers1, .area-weathers2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 650;
+    color: rgba(255, 255, 255, 0.906);
+    height: 25%;
+    font-feature-settings: "palt";
+    padding: 0.1em;
+    line-height: 48px;
+    font-family: 'Kosugi Maru', sans-serif;
+  }
+
+
   &-fhoto{
     background-color: aquamarine;
-    height: 40%;
+    height: 30%;
 
   }
 
@@ -32,10 +49,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 30%;
+    height: 20%;
     font-size: 28px;
     font-weight: 700;
     color: white;
+    font-family: 'Kosugi Maru', sans-serif;
   }
 
   &-waves,&-waves1,&-waves2{
@@ -43,10 +61,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 30%;
+    height: 20%;
     font-size: 30px;
     font-weight: 700;
     color: white;
+    font-family: 'Kosugi Maru', sans-serif;
   }
 
 // .weatherの最後
