--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,7 @@
+*{
+  margin: 0%;
+}
+
 .weather {
   text-align: center;
   // background-color: aquamarine;
@@ -10,10 +14,9 @@
 
   &-targetArea {
     h1 {
-      font-size: 45px;
+      font-size: 40px;
       color: rgba(2, 2, 2, 0.878);
       font-family: 'Kosugi Maru', sans-serif;
-      padding: 25px;
     }
   }
 
@@ -47,7 +50,7 @@
     justify-content: center;
 
     h1 {
-      font-size: 48px;
+      font-size: 40px;
       line-height: 70px;
       font-family: 'Kosugi Maru', sans-serif;
       color: rgb(206, 3, 80);
@@ -59,6 +62,7 @@
   &-dayAfterTomorrow {
     border: double 4px rgba(0, 0, 0, 0.697);
     width: 350px;
+
   }
 
 
@@ -69,11 +73,11 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    font-size: 32px;
+    font-size: 30px;
     font-weight: 650;
     color: rgba(0, 0, 0, 0.793);
     height: 20%;
-    letter-spacing: -0.01em;
+    letter-spacing: -0.1em;
     line-height: 48px;
     font-family: 'Kosugi Maru', sans-serif;
   }
@@ -93,7 +97,7 @@
     align-items: center;
     justify-content: center;
     height: 5%;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 700;
     color: rgba(0, 0, 0, 0.853);
     font-family: 'Kosugi Maru', sans-serif;
@@ -107,7 +111,7 @@
     align-items: center;
     justify-content: center;
     height: 15%;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 700;
     line-height: 40px;
     color: rgba(0, 0, 0, 0.866);
@@ -116,9 +120,5 @@
 
   // .weatherの最後
 
-
-h1 {
-  margin: 0%;
 }
 
-}
