天気予報にラインhightをかけました

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
   font-size: 40px;
   color: rgba(2, 2, 2, 0.878);
   font-family: 'Kosugi Maru', sans-serif;
+  line-height: 80px;
 }
 
 .weather-conteinar {
