--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -17,6 +17,7 @@
       font-size: 40px;
       color: rgba(2, 2, 2, 0.878);
       font-family: 'Kosugi Maru', sans-serif;
+      line-height: 80px;
     }
   }
 
