--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0%;
 }
@@ -8,6 +9,16 @@
   background-size: cover;
   height: 100vh;
   width: 100vw;
+  /*1で解説*/
+}
+
+@keyframes fadeInAnime {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .weather-targetArea h1 {
