--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
   background-image: url(../../img/background.jpeg);
   background-size: cover;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   /*1で解説*/
 }
 
