--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,7 +8,7 @@
   background-image: url(../../img/background.jpeg);
   background-size: cover;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 
   // .fadeIn {
   //   animation-name: fadeInAnime;/*1で解説*/
